--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background:#001f3f url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect width="100" height="100" fill="%23f4f4f4"/><path d="M10 10 L90 50 L10 90 Z" fill="%230073aa" stroke="%23005599" stroke-width="2"/></svg>') repeat;
+            background:#001f3f;
             color: #fff;
             background-size: 200px 200px;
         }
