--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background:#001f3f;
-            color: #fff;
+            color: #000000;
             background-size: 200px 200px;
         }
         .container {
@@ -308,13 +308,13 @@
     <!-- Live Chat Widget (Smartsupp) -->
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
-        _smartsupp.key = 'e99fb2b135abd996810c4549a9bd0573ddb32b57'; // your unique key
+        _smartsupp.key = 'e99fb2b135abd996810c4549a9bd0573ddb32b57'; 
         window.smartsupp || (function(d) {
             var s, c, o = smartsupp = function() { o..push(arguments); }; o. = [];
             s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
             c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
             c.src = 'https://www.smartsuppchat.com/loader.js?';
-            s.parentNode.insertBefore(c, s);
+            s.parentNode.insertBefore(c,s);
         })(document);
     </script>
 
